AssetId test vectors + ZSA value commitments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,4 @@ orchard_note_encryption = "zcash_test_vectors.orchard.note_encryption:main"
 orchard_poseidon = "zcash_test_vectors.orchard.poseidon:main"
 orchard_poseidon_hash = "zcash_test_vectors.orchard.poseidon:hash_test_vectors"
 orchard_sinsemilla = "zcash_test_vectors.orchard.sinsemilla:main"
+orchard_asset_id="zcash_test_vectors.orchard.asset_id:main"
