making latest changes -- sticking to 32 byte messages for signing using issuance authorization signature, improving the data structures, updating the Rust vectors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,4 +63,4 @@ orchard_poseidon = "zcash_test_vectors.orchard.poseidon:main"
 orchard_poseidon_hash = "zcash_test_vectors.orchard.poseidon:hash_test_vectors"
 orchard_sinsemilla = "zcash_test_vectors.orchard.sinsemilla:main"
 orchard_asset_base="zcash_test_vectors.orchard.asset_base:main"
-zsa_issuance_auth_sig="zcash_test_vectors.orchard.issuance_auth_sig:main"
+zsa_issuance_auth_sig="zcash_test_vectors.orchard.zsa_issuance_auth_sig:main"
