--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,5 +62,7 @@ orchard_note_encryption = "zcash_test_vectors.orchard.note_encryption:main"
 orchard_poseidon = "zcash_test_vectors.orchard.poseidon:main"
 orchard_poseidon_hash = "zcash_test_vectors.orchard.poseidon:hash_test_vectors"
 orchard_sinsemilla = "zcash_test_vectors.orchard.sinsemilla:main"
-orchard_asset_base="zcash_test_vectors.orchard.asset_base:main"
-issuance_auth_sig="zcash_test_vectors.orchard.issuance_auth_sig:main"
+
+# OrchardZSA test vectors
+orchardzsa_asset_base="zcash_test_vectors.orchardzsa.asset_base:main"
+orchardzsa_issuance_auth_sig="zcash_test_vectors.orchardzsa.issuance_auth_sig:main"
