--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,3 +66,5 @@ orchard_sinsemilla = "zcash_test_vectors.orchard.sinsemilla:main"
 # OrchardZSA test vectors
 orchardzsa_asset_base="zcash_test_vectors.orchardzsa.asset_base:main"
 orchardzsa_issuance_auth_sig="zcash_test_vectors.orchardzsa.issuance_auth_sig:main"
+orchardzsa_key_components = "zcash_test_vectors.orchardzsa.key_components:main"
+orchardzsa_note_encryption = "zcash_test_vectors.orchardzsa.note_encryption:main"
