re-adding the main function to key_components so that orchard vectors can be generated independently

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ sapling_zip32_hard = "zcash_test_vectors.sapling.zip32:hard"
 orchard_empty_roots = "zcash_test_vectors.orchard.empty_roots:main"
 orchard_generators = "zcash_test_vectors.orchard.generators:main"
 orchard_group_hash = "zcash_test_vectors.orchard.group_hash:main"
+orchard_key_components = "zcash_test_vectors.orchard.key_components:main"
 orchard_map_to_curve = "zcash_test_vectors.orchard.group_hash:map_to_curve_test_vectors"
 orchard_merkle_tree = "zcash_test_vectors.orchard.merkle_tree:main"
 orchard_note_encryption = "zcash_test_vectors.orchard.note_encryption:main"
