--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ unified_incoming_viewing_keys = "zcash_test_vectors.unified_incoming_viewing_key
 zip_0143 = "zcash_test_vectors.zip_0143:main"
 zip_0243 = "zcash_test_vectors.zip_0243:main"
 zip_0244 = "zcash_test_vectors.zip_0244:main"
+zip_0244_zsa = "zcash_test_vectors.zip_0244_zsa:main"
 
 # Transparent test vectors
 bip_0032 = "zcash_test_vectors.transparent.bip_0032:main"
