--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ unified_incoming_viewing_keys = "zcash_test_vectors.unified_incoming_viewing_key
 zip_0143 = "zcash_test_vectors.zip_0143:main"
 zip_0243 = "zcash_test_vectors.zip_0243:main"
 zip_0244 = "zcash_test_vectors.zip_0244:main"
-zip_0244_zsa = "zcash_test_vectors.zip_0244_zsa:main"
 
 # Transparent test vectors
 bip_0032 = "zcash_test_vectors.transparent.bip_0032:main"
@@ -72,3 +71,4 @@ orchard_zsa_asset_base="zcash_test_vectors.orchard_zsa.asset_base:main"
 orchard_zsa_issuance_auth_sig="zcash_test_vectors.orchard_zsa.issuance_auth_sig:main"
 orchard_zsa_key_components = "zcash_test_vectors.orchard_zsa.key_components:main"
 orchard_zsa_note_encryption = "zcash_test_vectors.orchard_zsa.note_encryption:main"
+orchard_zsa_digests = "zcash_test_vectors.orchard_zsa.digests:main"
