changing file name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,4 +71,4 @@ orchard_zsa_asset_base="zcash_test_vectors.orchard_zsa.asset_base:main"
 orchard_zsa_issuance_auth_sig="zcash_test_vectors.orchard_zsa.issuance_auth_sig:main"
 orchard_zsa_key_components = "zcash_test_vectors.orchard_zsa.key_components:main"
 orchard_zsa_note_encryption = "zcash_test_vectors.orchard_zsa.note_encryption:main"
-orchard_zsa_digests = "zcash_test_vectors.transaction_zsa:main"
+orchard_zsa_digests = "zcash_test_vectors.transaction_v6:main"
