Update test_vectors.yml to try to fix CI issue

--- a/.github/workflows/test_vectors.yml
+++ b/.github/workflows/test_vectors.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           python-version: '3.9'
 
+      - name: Update apt
+        run: sudo apt-get update
+
       - name: Install gnome-keyring
         run: sudo apt-get install gnome-keyring
 
